# amazonka-iam-policy

./: README.md  amazonka-iam-policy.cabal  stack.yaml
src/Amazonka/IAM/: Policy.hs
src/Amazonka/IAM/Policy/: Lens.hs
test/: Doctest.hs  Golden.hs  Main.hs
test/golden/: iam-policy-simulator.json  iam-user-rotate-credentials.json  policy-simulator-api.json  policy-simulator-console.json  rds-region-admin.json  rds-tagged-resources.json  s3-bucket-management.json  s3-bucket-read-write.json  s3-cognito-bucket-objects.json  s3-iam-user-home-directory.json
