name:                  amazonka-iam-policy
version:               0.0.1
synopsis:              Amazon IAM Policy Documents.
homepage:              https://github.com/brendanhay/amazonka-iam-policy
bug-reports:           https://github.com/brendanhay/amazonka-iam-policy/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2017 Brendan Hay
category:              Network, AWS, Cloud
build-type:            Simple
extra-source-files:    README.md CHANGELOG.md
cabal-version:         >= 1.10
data-files:            test/golden/*.json

description:
    Amazon IAM Policy Documents.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka-iam-policy.git
    subdir:            amazonka-iam-policy

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
        Amazonka.IAM.Policy

    build-depends:
          aeson
        , base >= 4.7 && < 5
        , text
        , profunctors

test-suite tests
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    other-modules:
        Paths_amazonka_iam_policy

    build-depends:
          aeson
        , amazonka-iam-policy
        , base
        , bytestring
        , hspec
        , microlens